  CHANGES IN BayesFactor VERSION 0.9.9

CHANGES
  *  Refactored t test and meta-t test code
  *  Moved many backend functions to Rcpp from R C API
  *  t test samplers now sample from interval null hypotheses and point null hypotheses where appropriate
  *  fixed bug in in meta t test sampler which wouldn't allow sampling small numbers of MCMC samples

  CHANGES IN BayesFactor VERSION 0.9.8

CHANGES
  *  Fixed bugs in model enumeration code
  *  Fixed bug leading to wrong computation of number of covariate when interactions between continuous variables were included
  *  Corrected typos/old information in the documentation 
  *  Fixed a memory allocation bug that affected computing Bayes factors with lots of data 
  *  Added meta-analytic Bayes factor for t tests (see meta.ttestBF)
  *  Fixed bug in ttestBF that yielded Bayes factor of NaN for very extreme posterior interval probabilities
  *  Fixed several bugs causing infinite integrals; generally improved integration
  *  Added check to ensure no missing data before analyses
  *  Added callbacks for access by third-party interfaces

  CHANGES IN BayesFactor VERSION 0.9.7

CHANGES
  *  Fixed a bug causing posterior sampling of t test to fail when data was defined as integer type
  *  Fixed a bug causing a two-way interaction to sometimes not be included in 3-way ANOVA analyses
  *  Reworked model enumeration code to be more efficient and faster; 4-way analyses no longer take a long time to build
  *  Moved 'methods' to Depends so that Rscript will work without the user having to explicitly load the package methods

  CHANGES IN BayesFactor VERSION 0.9.6

CHANGES
  *  Fixed a bug causing Bayes factors to evaluate to NA when matrix inversion fails (very rare)
  *  Fixed a bug causing computation to fail if importance sampling fails in nWayAOV. Uses method="simple" as a fallback.
  *  Fixed a bug where quadrature failed for large F values in unbalanced one-way ANOVA designs