@@ -3,7 +3,7 @@
 #include <time.h>
 #include "bfcommon.h"
 
-double meta_t_like_Rcpp(double delta, Rcpp::NumericVector t, Rcpp::NumericVector n, Rcpp::NumericVector df, double rscale);
+double proptest_like_Rcpp(double lo, Rcpp::NumericVector y, Rcpp::NumericVector n, double p, double rscale);
 
 /* NOTE: RcppProgress code is disabled until
    I can fix the header issue. */
@@ -11,7 +11,7 @@ double meta_t_like_Rcpp(double delta, Rcpp::NumericVector t, Rcpp::NumericVector
 using namespace Rcpp;
 
 // [[Rcpp::export]]
-NumericMatrix metropMetaTRcpp(NumericVector t, NumericVector n1, NumericVector n2, bool twoSample, double rscale, int iterations, bool doInterval, 
+NumericMatrix metropProportionRcpp(NumericVector y, NumericVector n, double p, double rscale, int iterations, bool doInterval, 
                       NumericVector interval, bool intervalCompl, bool nullModel, int progress, Function callback, double callbackInterval) 
 {
     // setting last_cb to the beginning of the epoch 
@@ -19,14 +19,11 @@ NumericMatrix metropMetaTRcpp(NumericVector t, NumericVector n1, NumericVector n
     time_t last_cb = static_cast<time_t>(int(0));    
 
     int i = 0;
-    double Ubounds[2];
-    double candidate, z, transDelta;
-    bool inInterval, validDelta = true;
-    
-    NumericVector d(clone(t));
-    NumericVector eff_n(clone(n1));
-    NumericVector nu(clone(n1));
-  
+    double Ubounds[2], mu = log( p / ( 1 - p ) );
+    double candidate, z, trans_lo;
+    bool inInterval, valid_lo = true;
+
+      
     // For intervals
     if( doInterval){
       if( interval.size() == 0){
@@ -36,22 +33,12 @@ NumericMatrix metropMetaTRcpp(NumericVector t, NumericVector n1, NumericVector n
       }
     }
 
-    // effective sample size and degrees of freedom
-    if(twoSample){
-      eff_n = n1 * n2  / (n1 + n2);
-      nu = n1 + n2 - 2;
-    }else{
-      eff_n = n1;
-      nu = n1 - 1;
-    }
-
     // starting values
-    for( i = 0 ; i < t.size() ; i++ ){
-      d[i] = d[i] / sqrt( eff_n[i] );
-    }
-    double delta0 = sum( d * eff_n ) / sum( eff_n ) ;
-    double delta_sd = 1 / sqrt( sum( eff_n ) );
-    double delta = delta0;
+    double ln_p0 = log( sum(y) + 1 ) - log( sum(n) + 2 );
+    double lo0 = Rf_qlogis( ln_p0, 0, 1, 1, 1 );
+    double lo_sd = exp ( 0.5 * ( ln_p0 + Rf_pexp( -ln_p0, 1, 1, 1 )  - 
+                                 log( sum(n) + 2 ) - 2 * Rf_dlogis( lo0, 0, 1, 1 ) ) );
+    double lo = lo0;
     
     // create progress bar
     //Progress p(iterations, (bool) progress);
@@ -59,12 +46,14 @@ NumericMatrix metropMetaTRcpp(NumericVector t, NumericVector n1, NumericVector n
     // Create matrix for chains
     NumericMatrix chains(iterations, 1);
     
-    if(nullModel)
+    if(nullModel){
+      std::fill(chains.begin(), chains.end(), mu);
       return chains;
-     
+    }
+    
     if(doInterval){
-      Ubounds[0] = Rf_pnorm5( interval[0], delta0, delta_sd, 1, 0 );
-      Ubounds[1] = Rf_pnorm5( interval[1], delta0, delta_sd, 1, 0 );
+      Ubounds[0] = Rf_pnorm5( interval[0], lo0, lo_sd, 1, 0 );
+      Ubounds[1] = Rf_pnorm5( interval[1], lo0, lo_sd, 1, 0 );
     }
  
     // Start sampler
@@ -92,43 +81,45 @@ NumericMatrix metropMetaTRcpp(NumericVector t, NumericVector n1, NumericVector n
         }else{
           candidate = Rf_runif(Ubounds[0], Ubounds[1]);
         }
-        candidate = Rf_qnorm5(candidate, delta0, delta_sd, 1, 0 );
+        candidate = Rf_qnorm5(candidate, lo0, lo_sd, 1, 0 );
       }else{
-        candidate = Rf_rnorm( delta0, delta_sd );
+        candidate = Rf_rnorm( lo0, lo_sd );
       }
       
       // Metropolis-Hastings step
-      z = meta_t_like_Rcpp(candidate, t, eff_n, nu, rscale) - 
-        meta_t_like_Rcpp(delta, t, eff_n, nu, rscale) +
-        Rf_dnorm4(delta, delta0, delta_sd, 1) - 
-        Rf_dnorm4(candidate, delta0, delta_sd, 1);
+      z = proptest_like_Rcpp(candidate, y, n, mu, rscale) - 
+        proptest_like_Rcpp(lo, y, n, mu, rscale) +
+        Rf_dnorm4(lo, lo0, lo_sd, 1) - 
+        Rf_dnorm4(candidate, lo0, lo_sd, 1);
       
       
       if(doInterval){
-          transDelta = Rf_pnorm5(delta, delta0, delta_sd, 1, 0 );
-          inInterval = ( Ubounds[0] > transDelta ) && ( Ubounds[1] < transDelta );
+          trans_lo = Rf_pnorm5(lo, lo0, lo_sd, 1, 0 );
+          inInterval = ( Ubounds[0] > trans_lo ) && ( Ubounds[1] < trans_lo );
           if( (inInterval && intervalCompl) || (!inInterval && !intervalCompl) )
-            validDelta = false;
+            valid_lo = false;
       }
       
-      if( ( Rf_rexp(1) > -z ) || !validDelta ){
-        delta = candidate; 
+      if( ( Rf_rexp(1) > -z ) || !valid_lo ){
+        lo = candidate; 
       }
 
       // copy to chains
-      chains(i, 0) = delta;
+      chains(i, 0) = lo;
     } // end sampler
 
     return chains;
 }
 
-double meta_t_like_Rcpp(double delta, NumericVector t, NumericVector n, NumericVector df, double rscale)
+
+double proptest_like_Rcpp(double lo, NumericVector y, NumericVector n, double mu, double rscale)
 {
   int i;
-  double logdens = Rf_dcauchy( delta, 0, rscale, 1);
+  double theta = 1 / ( 1 + exp(-lo) );
+  double logdens = Rf_dlogis( lo, mu, rscale, 1);
  
-  for( i = 0; i < t.size() ; i++ ){
-    logdens +=  Rf_dnt( t[i], df[i], delta*sqrt(n[i]), 1);
+  for( i = 0; i < y.size() ; i++ ){
+    logdens +=  Rf_dbinom( y[i], n[i], theta, 1);
   }
   return logdens;
 }
